dynamic creation of PointWidgets

--- a/index.html
+++ b/index.html
@@ -22,26 +22,11 @@
       </div>
 
       <div class="info panel">
-        <table>
+        <table id="point_pos_table">
           <tr>
             <th>Point</th>
             <th>X</th>
             <th>Y</th>
-          </tr>
-          <tr>
-            <td>A</td>
-            <td id="point_a_x"></td>
-            <td id="point_a_y"></td>
-          </tr>
-          <tr>
-            <td>B</td>
-            <td id="point_b_x"></td>
-            <td id="point_b_y"></td>
-          </tr>
-          <tr>
-            <td>C</td>
-            <td id="point_c_x"></td>
-            <td id="point_c_y"></td>
           </tr>
           <tr>
             <td>Cur</td>
