added range sliderd

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <th>Point</th>
             <th>X</th>
             <th>Y</th>
+            <th>Move %</th>
+            <th></th>
           </tr>
           <tr>
             <td>Cur</td>
