--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
       </div>
 
       <div class="info panel">
+        <table id="misc_info_table">
+          <tr>
+            <th>Current Location</th>
+            <td id="point_cur_x"></td>
+            <td id="point_cur_y"></td>
+          </tr>
+          <tr>
+            <th>Total Steps</th>
+            <td id="total_steps" colspan=2></td>
+          </tr>
+        </table>
         <table id="point_pos_table">
           <tr>
             <th>Point</th>
@@ -29,11 +40,6 @@
             <th>Y</th>
             <th>Move %</th>
             <th></th>
-          </tr>
-          <tr>
-            <td>Cur</td>
-            <td id="point_cur_x"></td>
-            <td id="point_cur_y"></td>
           </tr>
         </table>
       </div>
