added color selection

--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@
             <th>Total Steps</th>
             <td id="total_steps" colspan=2></td>
           </tr>
+          <tr>
+            <th>Steps / Frame</th>
+            <td colspan=2>
+              <input type="number" id="steps_per_frame"
+                     min="0" max="500" step="10">
+            </td>
+          </tr>
         </table>
         <table id="point_pos_table">
           <tr>
-            <th>Point</th>
+            <th>P</th>
+            <th>Color</th>
             <th>X</th>
             <th>Y</th>
             <th>Move %</th>
