graph canvas is resizable

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Integer Sequences</title>
     <link href="basic.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="style.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="style.css" media="screen" rel="stylesheet"
+          type="text/css" title="app_stylesheet">
   </head>
   <body>
     <header>
@@ -13,7 +14,7 @@
 
     <div id="content">
       <div class="graph panel">
-        <div class="canvas_wrapper canvas_size">
+        <div id="graph_wrapper" class="canvas_wrapper canvas_size">
           <canvas id="graph" class="graph_canvas canvas_size" width="420" height="320">
             This requires a browser that supports the &lt;canvas&gt; tag.
           </canvas>
