serialization almost working

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 
         <div class="imgbox buttonbox">
           <button id="button_create_png">Create PNG</button>
+          <button id="button_save">Save</button>
+          <button id="button_load">Load</button>
         </div>
 
         <div class="pointsbox buttonbox">
@@ -121,6 +123,17 @@
               <label for="restrict_double_opposite" class="opposite">Opposite</label>
             </li>
           </ul>
+        </div>
+      </div>
+
+      <div id="serializebox">
+        <h3 id="serializebox_title" class="panel">Title</h3>
+        <textarea id="serializebox_text"></textarea>
+        <div class="ui panel">
+          <div class="actionbuttons buttonbox">
+            <button id="serializebox_action">Unknown Action</button>
+            <button id="serializebox_cancel">Cancel</button>          
+          </div>
         </div>
       </div>
     </div>
